--- a/main.html
+++ b/main.html
@@ -21,9 +21,10 @@
         </tr>
       </thead>
       <tbody id="output">
-		  <tr>
-			  <td colspan="2">Loading...</td>
-		  </tr>
+		 <tr id="loading">
+  <td colspan="2">Loading...</td>
+</tr>
+
 
 	  </tbody>
     </table>
